added base module dependency

--- a/view/adminhtml/layout/imageclean_imageclean_categoryindex.xml
+++ b/view/adminhtml/layout/imageclean_imageclean_categoryindex.xml
@@ -19,10 +19,11 @@
  * @copyright   Copyright (c) Aimsinfosoft (https://www.aimsinfosoft.com)
  * @license     https://www.aimsinfosoft.com/LICENSE.txt
  */ -->
- 
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">   
-    <update handle="styles"/>  
-    <body> 	
+
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <update handle="styles"/>
+    <body>
         <referenceContainer name="content">
             <uiComponent name="imageclean_imageclean_categorygrid"/>
         </referenceContainer>
